--- a/Lectures/Lesson 1 - Getting started with Ruby.ipynb
+++ b/Lectures/Lesson 1 - Getting started with Ruby.ipynb
@@ -1289,9 +1289,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for loop\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "each loop\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "single line each loop\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "puts \"for loop\"\n",
     "for x in [1,2,3]\n",
@@ -1321,9 +1350,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "try next\n",
+      "3\n",
+      "4\n",
+      "\n",
+      "try break\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "try redo\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = [1,2,3,4]\n",
     "puts \"try next\"\n",
@@ -1336,7 +1397,7 @@
     "\n",
     "puts \"try break\"\n",
     "a.each do |x|\n",
-    "  break if x > 3\n",
+    "  break if x > 3 # takes us to the end\n",
     "  puts x\n",
     "end\n",
     "\n",
@@ -1348,7 +1409,7 @@
     "a.each do |x|\n",
     "  y+=1\n",
     "  puts x \n",
-    "  redo if y == 3\n",
+    "  redo if y == 3 # redoing the loop with the same value of x |x| if the condition is true\n",
     "end\n"
    ]
   },
@@ -1372,9 +1433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ruby\n",
+      "is\n",
+      "cool\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunction(a,b,c)\n",
     "    puts a\n",
