--- a/Lectures/How NOT to work with lists in Ruby.ipynb
+++ b/Lectures/How NOT to work with lists in Ruby.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#<Gene:0x0000558770b76c70>\n",
       "This is the WORST solution to the problem...\n",
       "P12344\n",
+      "At1g003454\n",
       "P12345\n",
+      "At1g003454\n",
       "P12346\n",
+      "At1g003454\n",
       "P12347\n",
+      "At1g003454\n",
       "P12348\n",
+      "At1g003454\n",
       "\n",
       "\n",
       "NO NO NO!\n",
@@ -44,8 +48,7 @@
    ],
    "source": [
     "class Gene\n",
-    "  attr_accessor :id\n",
-    "  attr_accessor :codes\n",
+    "  attr_accessor :id, :codes\n",
     "  @@all_genes = []  # class level variable\n",
     "  \n",
     "  def initialize (params)\n",
@@ -151,11 +154,18 @@
     "puts\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 2.4.2",
+   "display_name": "Ruby 2.5.1",
    "language": "ruby",
    "name": "ruby"
   },
@@ -163,7 +173,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "2.4.2"
+   "version": "2.5.1"
   }
  },
  "nbformat": 4,
