--- a/Lectures/Lesson 2 - Object Oriented Programming.ipynb
+++ b/Lectures/Lesson 2 - Object Oriented Programming.ipynb
@@ -1037,7 +1037,7 @@
     "      end\n",
     "    end\n",
     "    @diseases = newlist   # now set the value of @diseases to the new list of validated Disease objects\n",
-    "    # we don't need to define first the instance variables it seems, and we don't usee the attribute accesor\n",
+    "    # we don't need to define first the instance variables it seems, and we don't usee the attribute accessor\n",
     "    # in this case because we want to check. this is basically overriding what the AA would be.\n",
     "  end\n",
     "  \n",
