--- a/Lectures/Lesson 2A - Ruby "Ideoms".ipynb
+++ b/Lectures/Lesson 2A - Ruby "Ideoms".ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +48,17 @@
     "\n",
     "\n",
     "# long form of the ideom\n",
-    "#       if x == nil || x == false\n",
+    "#       if x == nil || x == false -----> todo lo demas en Ruby es truthy!\n",
     "#            x = \"goodbye\"\n",
     "#       end\n",
     "#\n",
     "# short form\n",
     "#       x ||= \"goodbye\"\n",
     "\n",
+    "# This basically sets the value only if it doesn't have the value already! (if it has a value, it evaluates to true)\n",
+    "# If it doesn't have a value (nil, false) it evaluates to false, only those two evaluate to false.\n",
+    "\n",
+    "# in normal it is with two ||:  ||=\n",
     "x ||= \"goodbye\"   # \"x or equals value\"\n",
     "puts x\n",
     "\n",
@@ -65,11 +69,19 @@
     "puts\n",
     "\n",
     "\n",
+    "# for lists it is with only one |:     |=\n",
     "frutas = [\"manzana\", \"uva\", \"zitrone\"]\n",
     "frutas |= [\"manzana\"]   # add if manzana is not in the list\n",
     "puts frutas\n",
     "frutas |= [\"limon\"]   # add if limon is not in the list\n",
-    "puts frutas\n"
+    "puts frutas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## next assignment, we'll be getting duplicates from dbs, don't add if we already seen it"
    ]
   },
   {
@@ -81,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,18 +145,22 @@
     "\n",
     "# Ideom 3:  Blocks, Procs, and Lambdas\n",
     "\n",
+    "## also useful for next assignment\n",
+    "\n",
     "It is VERY common in Ruby to pass functions into other functions (in fact, you have already been doing this, but you might not have realized it!  for example, with \"a.each\"!)  \n",
     "\n",
     "These \"lambdas\" are often put into variables.\n",
     "\n",
     "When a block is passed into a function, you can execute the incoming code using the command \"yield\", followed by whatever arguments are necessary\n",
     "\n",
-    "Procs are very similar to lambdas, but we wont study them in this class.  If you are interested, you can study on your own to learn [the difference beween a \"block\", a \"Proc\" and a \"lambda\"](http://awaxman11.github.io/blog/2013/08/05/what-is-the-difference-between-a-block/)"
+    "Procs are very similar to lambdas, but we wont study them in this class.  If you are interested, you can study on your own to learn [the difference beween a \"block\", a \"Proc\" and a \"lambda\"](http://awaxman11.github.io/blog/2013/08/05/what-is-the-difference-between-a-block/)\n",
+    "\n",
+    "* Procs: procedures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +182,15 @@
       "pass data directly\n",
       "another way to pass directly\n",
       "\n",
+      "sentence\n",
+      "to\n",
+      "word\n",
       "put some data here\n",
+      "\n",
+      "put\n",
+      "some\n",
+      "data\n",
+      "here\n",
       "\n",
       "the sum is 15\n",
       "the difference is 5\n"
@@ -198,30 +222,45 @@
     "myblock.call(\"another way to pass directly\")\n",
     "puts\n",
     "\n",
+    "# more complex done by me\n",
+    "sentence_to_word = lambda {|sentence| sentence.split.each do |word| puts word end}\n",
+    "sentence_to_word[\"sentence to word\"]\n",
+    "\n",
     "# ------------------------  how to use \"yield\"\n",
     "\n",
-    "def i_accept_blocks\n",
+    "def i_accept_blocks # we don't need to put a (this thing), we can pass it directly\n",
     "  yield \"put some data here\"  # \"yield\" executes the incoming block.  this is like myblock.call(\"put data here\")\n",
     "end\n",
     "\n",
     "i_accept_blocks(&myblock)\n",
     "puts\n",
     "\n",
+    "i_accept_blocks(&sentence_to_word)\n",
+    "puts\n",
     "\n",
     "# -----------------------  an example of how lambdas provide flexibility!\n",
     "\n",
     "myadd = lambda {|a,b| puts \"the sum is #{a + b}\"}\n",
     "mysubtract = lambda {|a,b| puts \"the difference is #{a-b}\"}\n",
     "\n",
-    "def i_do_any_math (x, y)\n",
-    "  yield(x, y)\n",
+    "def i_do_any_math (x, y) # it takes two arguments, and you can pass a lambda\n",
+    "  yield(x, y) # it calls the lambda on those two arguments\n",
     "end\n",
     "\n",
     "myadd = lambda {|a,b| puts \"the sum is #{a + b}\"}\n",
     "mysubtract = lambda {|a,b| puts \"the difference is #{a-b}\"}\n",
     "\n",
-    "i_do_any_math(10, 5, &myadd)\n",
-    "i_do_any_math(10, 5, &mysubtract)"
+    "i_do_any_math(10, 5, &myadd) # passing the lambda as the final argument with &\n",
+    "i_do_any_math(10, 5, &mysubtract)\n",
+    "\n",
+    "# generic functions that behave contextually different depending on the lambda we pass."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## lambdas can be useful for the second assignment"
    ]
   },
   {
@@ -240,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,16 +294,18 @@
     }
    ],
    "source": [
-    "puts [5,6,7,8].map{|x| x*10}\n",
+    "puts [5,6,7,8].map{|x| x*10} # map always returns array with same length\n",
     "\n",
     "# or for more complex functions\n",
     "myarray = [5,6,\"not_a_number\",7,8,\"not_a_number\"]\n",
     "newarray = myarray.map do |x|\n",
     "  next if x.is_a?(String)\n",
     "  x*100\n",
+    "  # x*100 unless x.is_a?(String)\n",
     "end\n",
     "puts newarray\n",
     "\n",
+    "# useful for assignment 2\n",
     "newarray = newarray.compact  # remove nil values\n",
     "puts newarray\n",
     "\n",
@@ -322,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +374,7 @@
       "\n",
       "       sample\n",
       "vaca\n",
-      "perro\n",
+      "gato\n",
       "cabra\n",
       "\n",
       "       any?\n",
@@ -361,11 +402,12 @@
     "puts\n",
     "\n",
     "puts \"       any?\"\n",
-    "puts animals.any?   # does the array have anhy elements?\n",
+    "puts animals.any?   # does the array have any elements?\n",
     "plants = []\n",
     "puts plants.any?\n",
     "puts\n",
     "\n",
+    "# we can pass a lambda to any?\n",
     "puts \"        any with block\"\n",
     "puts animals.any? {|animal| animal.match(/ca/)}  # any? also takes a lambda!  Any animals with \"ca\" in their name?\n",
     "puts animals.any? {|animal| animal.match(/gr/)}  # any? also takes a lambda!  Any animals with \"ca\" in their name?\n",
@@ -378,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 2.4.2",
+   "display_name": "Ruby 2.5.1",
    "language": "ruby",
    "name": "ruby"
   },
@@ -386,7 +428,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "2.4.2"
+   "version": "2.5.1"
   }
  },
  "nbformat": 4,
