--- a/Lectures/Lesson 4 - JSON from REST services.ipynb
+++ b/Lectures/Lesson 4 - JSON from REST services.ipynb
@@ -2392,6 +2392,56 @@
     "    \n",
     "#C: cell compartment, P: process, F??: function????"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### assignment:\n",
+    "\n",
+    "if we see a bunch of genes being corregulated, we would expect a lot of interactions of the proteins\n",
+    "\n",
+    "find the protein-protein interaction networks that exist among those 200 genes\n",
+    "\n",
+    "filter for the right species!!!! the database includes binding assays interspecies, those are not meaningful for our question.\n",
+    "\n",
+    "filter for the quality, we make the decisions etc\n",
+    "\n",
+    "all of the databases protein-interaction use the same restful uris, exactly the same restful interfaces. we are using IntAct. it is extremely clean, there aren't a lot of false positives.\n",
+    "\n",
+    "we can see it in psicquic.\n",
+    "\n",
+    "ebi psicquic webservices current search interactor ... (el link), hay links en moodle de lo de intact url o algo asi. todo no cambia excepto lo ultimo q es el agi locus code.\n",
+    "\n",
+    "we don't need to read the intact rest api thing, the url is in the other thing. the url thing.\n",
+    "\n",
+    "tab 25 format, the simplest, there are 15 columns, tsv. \n",
+    "\n",
+    "NCBI taxonomy, make sure the right species for both proteins\n",
+    "\n",
+    "confidence score, filter our proteins\n",
+    "\n",
+    "the problem, we have a list of genes.\n",
+    "\n",
+    "we take the first gene, ask what it interacts with, we get a list of often 0, maybe 100. we want to build an interaction network. the first one and the last one are both on our list, so they are interactors, even though the two of the middle aren't on our list.\n",
+    "\n",
+    "how deep do we go?\n",
+    "we start with 1, we find 10. for each of the 10, we look again.\n",
+    "don't go any deeper than 3 levels, or else we will never solve the problem.\n",
+    "\n",
+    "how do we represent this in memory, as an object. A int with B, B int with A, we need to find reciprocals, make sure we don't have things twice?? don't get into infinite loops. mark as visited. so a graph pretty much.\n",
+    "\n",
+    "we should filter based on quality, decide how deep we want to go, think how do we want to represent that network in an object\n",
+    "\n",
+    "the problem is we are representing a network in memory, the rest is easy.\n",
+    "\n",
+    "once we figure that out, nos esta hablando de las queues.\n",
+    "\n",
+    "another warning: don't try to solve the entire problem during debugging.\n",
+    "the final code will spend 6-7h to run xd.\n",
+    "to debug faster, find two things that interact and use those.\n",
+    "then after everything is debugged, run the final solution."
+   ]
   }
  ],
  "metadata": {
