--- a/Lectures/Lesson 4 - JSON from REST services.ipynb
+++ b/Lectures/Lesson 4 - JSON from REST services.ipynb
@@ -74,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2350,9 +2349,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"EMBL\"=>[[\"X89224\", \"CAA61508.1\", \"-\", \"Genomic_DNA\"], [\"AC000107\", \"AAF98199.1\", \"-\", \"Genomic_DNA\"], [\"CP002684\", \"AEE31296.1\", \"-\", \"Genomic_DNA\"], [\"DQ056469\", \"AAY78626.1\", \"-\", \"mRNA\"]], \"PIR\"=>[[\"S57710\", \"S57710\"]], \"RefSeq\"=>[[\"NP_564368.1\", \"NM_102834.2\"]], \"BioGRID\"=>[[\"25217\", \"15\"]], \"IntAct\"=>[[\"Q39090\", \"15\"]], \"STRING\"=>[[\"3702.AT1G30950.1\", \"-\"]], \"PaxDb\"=>[[\"Q39090\", \"-\"]], \"PRIDE\"=>[[\"Q39090\", \"-\"]], \"ProteomicsDB\"=>[[\"245294\", \"-\"]], \"EnsemblPlants\"=>[[\"AT1G30950.1\", \"AT1G30950.1\", \"AT1G30950\"]], \"GeneID\"=>[[\"839982\", \"-\"]], \"Gramene\"=>[[\"AT1G30950.1\", \"AT1G30950.1\", \"AT1G30950\"]], \"KEGG\"=>[[\"ath:AT1G30950\", \"-\"]], \"Araport\"=>[[\"AT1G30950\", \"-\"]], \"TAIR\"=>[[\"locus:2015766\", \"AT1G30950\"]], \"eggNOG\"=>[[\"ENOG502QR12\", \"Eukaryota\"]], \"HOGENOM\"=>[[\"CLU_038778_2_1_1\", \"-\"]], \"InParanoid\"=>[[\"Q39090\", \"-\"]], \"OMA\"=>[[\"TTWVEIE\", \"-\"]], \"OrthoDB\"=>[[\"1044393at2759\", \"-\"]], \"PhylomeDB\"=>[[\"Q39090\", \"-\"]], \"UniPathway\"=>[[\"UPA00143\", \"-\"]], \"PRO\"=>[[\"PR:Q39090\", \"-\"]], \"Proteomes\"=>[[\"UP000006548\", \"Chromosome 1\"]], \"ExpressionAtlas\"=>[[\"Q39090\", \"baseline and differential\"]], \"Genevisible\"=>[[\"Q39090\", \"AT\"]], \"GO\"=>[[\"GO:0005634\", \"C:nucleus\", \"IEA:UniProtKB-SubCell\"], [\"GO:0000151\", \"C:ubiquitin ligase complex\", \"IBA:GO_Central\"], [\"GO:0008134\", \"F:transcription factor binding\", \"IPI:TAIR\"], [\"GO:0004842\", \"F:ubiquitin-protein transferase activity\", \"IMP:TAIR\"], [\"GO:0030154\", \"P:cell differentiation\", \"IEA:UniProtKB-KW\"], [\"GO:0009908\", \"P:flower development\", \"IEA:UniProtKB-KW\"], [\"GO:0006355\", \"P:regulation of transcription, DNA-templated\", \"IDA:TAIR\"], [\"GO:0031146\", \"P:SCF-dependent proteasomal ubiquitin-dependent protein catabolic process\", \"IGI:TAIR\"]], \"Gene3D\"=>[[\"3.80.10.10\", \"-\", \"1\"]], \"InterPro\"=>[[\"IPR036047\", \"F-box-like_dom_sf\"], [\"IPR001810\", \"F-box_dom\"], [\"IPR015915\", \"Kelch-typ_b-propeller\"], [\"IPR032675\", \"LRR_dom_sf\"]], \"Pfam\"=>[[\"PF00646\", \"F-box\", \"1\"]], \"SMART\"=>[[\"SM00256\", \"FBOX\", \"1\"]], \"SUPFAM\"=>[[\"SSF117281\", \"SSF117281\", \"1\"], [\"SSF81383\", \"SSF81383\", \"1\"]], \"PROSITE\"=>[[\"PS50181\", \"FBOX\", \"1\"]]}]\n",
+      "{\"EMBL\"=>[[\"X89224\", \"CAA61508.1\", \"-\", \"Genomic_DNA\"], [\"AC000107\", \"AAF98199.1\", \"-\", \"Genomic_DNA\"], [\"CP002684\", \"AEE31296.1\", \"-\", \"Genomic_DNA\"], [\"DQ056469\", \"AAY78626.1\", \"-\", \"mRNA\"]], \"PIR\"=>[[\"S57710\", \"S57710\"]], \"RefSeq\"=>[[\"NP_564368.1\", \"NM_102834.2\"]], \"BioGRID\"=>[[\"25217\", \"15\"]], \"IntAct\"=>[[\"Q39090\", \"15\"]], \"STRING\"=>[[\"3702.AT1G30950.1\", \"-\"]], \"PaxDb\"=>[[\"Q39090\", \"-\"]], \"PRIDE\"=>[[\"Q39090\", \"-\"]], \"ProteomicsDB\"=>[[\"245294\", \"-\"]], \"EnsemblPlants\"=>[[\"AT1G30950.1\", \"AT1G30950.1\", \"AT1G30950\"]], \"GeneID\"=>[[\"839982\", \"-\"]], \"Gramene\"=>[[\"AT1G30950.1\", \"AT1G30950.1\", \"AT1G30950\"]], \"KEGG\"=>[[\"ath:AT1G30950\", \"-\"]], \"Araport\"=>[[\"AT1G30950\", \"-\"]], \"TAIR\"=>[[\"locus:2015766\", \"AT1G30950\"]], \"eggNOG\"=>[[\"ENOG502QR12\", \"Eukaryota\"]], \"HOGENOM\"=>[[\"CLU_038778_2_1_1\", \"-\"]], \"InParanoid\"=>[[\"Q39090\", \"-\"]], \"OMA\"=>[[\"TTWVEIE\", \"-\"]], \"OrthoDB\"=>[[\"1044393at2759\", \"-\"]], \"PhylomeDB\"=>[[\"Q39090\", \"-\"]], \"UniPathway\"=>[[\"UPA00143\", \"-\"]], \"PRO\"=>[[\"PR:Q39090\", \"-\"]], \"Proteomes\"=>[[\"UP000006548\", \"Chromosome 1\"]], \"ExpressionAtlas\"=>[[\"Q39090\", \"baseline and differential\"]], \"Genevisible\"=>[[\"Q39090\", \"AT\"]], \"GO\"=>[[\"GO:0005634\", \"C:nucleus\", \"IEA:UniProtKB-SubCell\"], [\"GO:0000151\", \"C:ubiquitin ligase complex\", \"IBA:GO_Central\"], [\"GO:0008134\", \"F:transcription factor binding\", \"IPI:TAIR\"], [\"GO:0004842\", \"F:ubiquitin-protein transferase activity\", \"IMP:TAIR\"], [\"GO:0030154\", \"P:cell differentiation\", \"IEA:UniProtKB-KW\"], [\"GO:0009908\", \"P:flower development\", \"IEA:UniProtKB-KW\"], [\"GO:0006355\", \"P:regulation of transcription, DNA-templated\", \"IDA:TAIR\"], [\"GO:0031146\", \"P:SCF-dependent proteasomal ubiquitin-dependent protein catabolic process\", \"IGI:TAIR\"]], \"Gene3D\"=>[[\"3.80.10.10\", \"-\", \"1\"]], \"InterPro\"=>[[\"IPR036047\", \"F-box-like_dom_sf\"], [\"IPR001810\", \"F-box_dom\"], [\"IPR015915\", \"Kelch-typ_b-propeller\"], [\"IPR032675\", \"LRR_dom_sf\"]], \"Pfam\"=>[[\"PF00646\", \"F-box\", \"1\"]], \"SMART\"=>[[\"SM00256\", \"FBOX\", \"1\"]], \"SUPFAM\"=>[[\"SSF117281\", \"SSF117281\", \"1\"], [\"SSF81383\", \"SSF81383\", \"1\"]], \"PROSITE\"=>[[\"PS50181\", \"FBOX\", \"1\"]]}\n",
+      "[\"GO:0005634\", \"C:nucleus\", \"IEA:UniProtKB-SubCell\"]\n"
+     ]
+    }
+   ],
    "source": [
     "# retrieves and prints the Gene Ontology annotations from the UFO protein of Arabidopsis thaliana \n",
     "# (look up the UniProt protein ID); \n",
@@ -2374,8 +2383,9 @@
     "  url: address)  \n",
     "\n",
     "data = JSON.parse(response.body) # turns the JSON file into a ruby data structure\n",
-    "\n",
+    "puts data\n",
     "data.each do |d|\n",
+    "  puts d\n",
     "  d[\"GO\"].each do |annotation|\n",
     "    puts annotation\n",
     "    abort\n",
